--- a/html/sheets.html
+++ b/html/sheets.html
@@ -39,9 +39,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
-        <a class="navbar-brand" href="index.html">
-          <img src="images/logo.png" width="180" alt="Build a Bed logo" />
-        </a>
+        <a class="navbar-brand" href="index.html"> </a>
         <button
           class="navbar-toggler"
           type="button"
@@ -59,16 +57,13 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="beds.html">Beds</a>
+              <a class="nav-link" href="beds.html">Mattress</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="frames.html">Frames</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="sheets.html">Sheets</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#footer">About</a>
             </li>
           </ul>
         </div>
@@ -100,7 +95,7 @@
     <script>
       document.addEventListener("DOMContentLoaded", () => {
         const API_URL =
-          "https://api.airtable.com/v0/YOUR_BASE_ID/tblQ9sd7dpF7TdVDf";
+          "https://api.airtable.com/v0/appDNuN0YvvvBTq0x/tblQ9sd7dpF7TdVDf";
         const API_KEY =
           "patQCICTtUh1z62ZT.c9baf2e2a3fc7b3aab90023bc632606c28e86b2bc52297c34bb1566f103f3ca1";
 
