--- a/html/beds.html
+++ b/html/beds.html
@@ -34,9 +34,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
-        <a class="navbar-brand" href="index.html">
-          <img src="images/logo.png" width="180" alt="Build a Bed logo" />
-        </a>
+        <a class="navbar-brand" href="index.html"> </a>
         <button
           class="navbar-toggler"
           type="button"
@@ -54,16 +52,13 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="beds.html">Beds</a>
+              <a class="nav-link active" href="beds.html">Mattress</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="frames.html">Frames</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="sheets.html">Sheets</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#footer">About</a>
             </li>
           </ul>
         </div>
