--- a/html/index.html
+++ b/html/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" type="text/css" href="./style.css" />
     <title>Build a bed</title>
   </head>
   <body>
     <!-- Navbar Section Starts From Here -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light custom">
       <div class="container">
         <a class="navbar-brand" href="index.html">
           <img src="images/logo.png" width="180px" alt="" />
@@ -37,16 +38,13 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="beds.html">Beds</a>
+              <a class="nav-link" href="beds.html">Mattress</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="frames.html">Frames</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="sheets.html">Sheets</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#footer">About</a>
             </li>
             <li class="nav-item">
               <form action="">
@@ -82,12 +80,13 @@
     <!-- Main -->
 
     <div class="container mt-5">
-      <h2 class="mb-4">Our Mattress Manufacturers</h2>
       <div id="manufacturer-list" class="row">
-        <!-- Airtable data will load here -->
+        <img src="assets/Build A Bed.jpg" alt="Build A Bed Design" />
+          <!-- Airtable data will load here -->
+        </div>
       </div>
     </div>
-
+   
     <!-- Footer -->
     <footer id="footer">
       <div class="container pt-5 mt-5">
@@ -125,14 +124,14 @@
                 <h4 class="mb-4">Made by</h4>
                 <ul class="nav flex-column">
                   <li class="nav-item mb-3">
-                    <a href="#" class="nav-link p-0"
-                      ><i class="fa-solid fa-person me-2"></i>Octavio Lara
+                    
+                      <i class="fa-solid fa-person me-2"></i>Octavio Lara
                       Ramirez</a
                     >
                   </li>
                   <li class="nav-item mb-3">
-                    <a href="#" class="nav-link p-0"
-                      ><i class="fa-solid fa-location-dot me-2"></i>San
+                    
+                      <i class="fa-solid fa-location-dot me-2"></i>San
                       Francisco, CA<br />
                     </a>
                   </li>
