--- a/html/index.html
+++ b/html/index.html
@@ -110,7 +110,7 @@
                     <a href="index.html" class="nav-link p-0">Home</a>
                   </li>
                   <li class="nav-item mb-3">
-                    <a href="beds.html" class="nav-link p-0">Beds</a>
+                    <a href="beds.html" class="nav-link p-0">Mattress</a>
                   </li>
                   <li class="nav-item mb-3">
                     <a href="frames.html" class="nav-link p-0">Frames</a>
