--- a/html/beds.html
+++ b/html/beds.html
@@ -12,6 +12,10 @@
       crossorigin="anonymous"
     />
 
+    <!-- CSS -->
+
+     <link rel="stylesheet" type="text/css" href="../style.css" />
+
     <!-- Optional: Font Awesome for icons -->
     <script
       src="https://kit.fontawesome.com/a076d05399.js"
@@ -32,7 +36,7 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light custom">
       <div class="container">
         <a class="navbar-brand" href="index.html"> </a>
         <button
@@ -68,14 +72,14 @@
     <!-- Main Content -->
 
     <div class="container mt-5">
-      <h2 class="mb-4">Mattresses</h2>
+      <h2 class="mb-4">Recommended Mattresses</h2>
       <div id="manufacturer-list" class="row">
         <!-- Airtable data will load here -->
       </div>
     </div>
 
     <!-- Footer -->
-    <footer id="footer" class="bg-light py-4 mt-5 text-center">
+    <footer id="footer" class="custom py-4 mt-5 text-center">
       <div class="container">
         <p>© Build a Bed</p>
       </div>
