--- a/html/beds.html
+++ b/html/beds.html
@@ -14,7 +14,7 @@
 
     <!-- CSS -->
 
-     <link rel="stylesheet" type="text/css" href="../style.css" />
+    <link rel="stylesheet" type="text/css" href="../style.css" />
 
     <!-- Optional: Font Awesome for icons -->
     <script
@@ -72,7 +72,7 @@
     <!-- Main Content -->
 
     <div class="container mt-5">
-      <h2 class="mb-4">Recommended Mattresses</h2>
+      <h2 class="mb-4">Recommended Mattresses Stores</h2>
       <div id="manufacturer-list" class="row">
         <!-- Airtable data will load here -->
       </div>
