--- a/html/index.html
+++ b/html/index.html
@@ -61,7 +61,7 @@
     <!-- Main -->
 
     <div id="manufacturer-list" class="row">
-  <img src="assets/Build A Bed.jpg" alt="Build A Bed Design" class="img-fluid mb-4" />
+  <img src="assets/BAD.png" alt="Build A Bed Design" class="img-fluid mb-4" />
 
   <!-- Section Divider -->
 <section class="py-5 text-center custom">
