--- a/sheets.html
+++ b/sheets.html
@@ -12,9 +12,9 @@
       crossorigin="anonymous"
     />
 
-     <!-- CSS -->
+    <!-- CSS -->
 
-     <link rel="stylesheet" type="text/css" href="../style.css" />
+    <link rel="stylesheet" type="text/css" href="../style.css" />
 
     <!-- Font Awesome for icons -->
     <script
@@ -76,7 +76,7 @@
 
     <!-- Main Content -->
     <div class="container mt-5">
-      <h2 class="mb-4">Recommended Bed Sheets</h2>
+      <h2 class="mb-4">Recommended Linen Bed Sheets</h2>
       <div id="sheet-list" class="row">
         <!-- Airtable data will load here -->
       </div>
