--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
   <div class="col-md-6">
     <h3>Sheets</h3>
     <p>
-      Sheets are an essential part of your bedding, providing comfort and style while protecting your mattress. The quality of sheets is often measured by thread count, which is the number of threads woven into one square inch of fabric. The ideal thread count typically ranges from 200 to 400, offering a perfect balance of softness, breathability, and durability. Sheets with lower thread counts may feel rough, while very high thread counts can sometimes reduce breathability and feel heavier. Choosing sheets within this range ensures a comfortable and restful sleep experience.
+      Sheets are an essential part of your bedding, providing comfort and style while protecting your mattress. The quality of sheets is often measured by thread count, which is the number of threads woven into one square inch of fabric. The ideal thread count typically ranges from 160 to 400 (depending on material), offering a perfect balance of softness, breathability, and durability. Sheets with lower thread counts may feel rough, while very high thread counts can sometimes reduce breathability and feel heavier. Choosing sheets within this range ensures a comfortable and restful sleep experience.
     </p>
   </div>
 </div>
