--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" type="text/css" href="../style.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Build a bed</title>
   </head>
   <body>
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-lg navbar-light custom">
       <div class="container">
         <a class="navbar-brand" href="index.html">
-          <img src="images/logo.png" width="180px" alt="" />
+          
         </a>
         <button
           class="navbar-toggler"
@@ -61,7 +61,7 @@
     <!-- Main -->
 
     <div id="manufacturer-list" class="row">
-  <img src="assets/BAD.png" alt="Build A Bed Design" class="img-fluid mb-4" />
+  <img src="Assets/BAD.png" alt="Build A Bed Design" class="img-fluid mb-4" />
 
   <!-- Section Divider -->
 <section class="py-5 text-center custom">
@@ -77,7 +77,7 @@
   <!-- Mattress Row -->
   <div class="row align-items-center mb-5">
     <div class="col-md-6">
-      <img src="assets/Mattress.webp" alt="Mattress" class="uniform-img">
+      <img src="Assets/Mattress.webp" alt="Mattress" class="uniform-img">
     </div>
     <div class="col-md-6">
       <h3>Mattress</h3>
@@ -90,7 +90,7 @@
   <!-- Beds Row -->
   <div class="row align-items-center flex-md-row-reverse mb-5">
     <div class="col-md-6">
-      <img src="assets/Frame.webp" alt="Bed Frame" class="uniform-img">
+      <img src="Assets/Frame.webp" alt="Bed Frame" class="uniform-img">
     </div>
     <div class="col-md-6">
       <h3>Bed Frames</h3>
@@ -103,7 +103,7 @@
  <!-- Sheets Row -->
 <div class="row align-items-center mb-5">
   <div class="col-md-6">
-    <img src="assets/Sheet.jpg" alt="Sheets" class="uniform-img">
+    <img src="Assets/Sheet.jpg" alt="Sheets" class="uniform-img">
   </div>
   <div class="col-md-6">
     <h3>Sheets</h3>
@@ -116,7 +116,7 @@
 <!-- Bunkie Board Row-->
 <div class="row align-items-center flex-md-row-reverse mb-5">
   <div class="col-md-6">
-    <img src="assets/BunkieBoard.jpg" alt="Sheets" class="uniform-img">
+    <img src="Assets/BunkieBoard.jpg" alt="Sheets" class="uniform-img">
   </div>
   <div class="col-md-6">
     <h3>Bunkie Boards</h3>
