--- a/beds.html
+++ b/beds.html
@@ -14,7 +14,7 @@
 
     <!-- CSS -->
 
-    <link rel="stylesheet" type="text/css" href="../style.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
 
     <!-- Optional: Font Awesome for icons -->
     <script
