--- a/frames.html
+++ b/frames.html
@@ -12,9 +12,9 @@
       crossorigin="anonymous"
     />
 
-     <!-- CSS -->
+    <!-- CSS -->
 
-     <link rel="stylesheet" type="text/css" href="../style.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
 
     <!-- Font Awesome for icons -->
     <script
