--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       "
     ></header>
     <!-- Main -->
-
+<main class="container">
     <div id="manufacturer-list" class="row">
   <img src="Assets/BAD.png" alt="Build A Bed Design" class="img-fluid mb-4" />
 
@@ -125,7 +125,7 @@
     </p>
   </div>
 </div>
-
+</main>
 
    
     <!-- Footer -->
